--- a/package.json
+++ b/package.json
@@ -10,18 +10,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@syncfusion/ej2": "^28.2.7",
+    "@syncfusion/ej2-react-calendars": "^28.2.7",
+    "@syncfusion/ej2-react-charts": "^28.2.7",
+    "@syncfusion/ej2-react-dropdowns": "^28.2.7",
+    "@syncfusion/ej2-react-grids": "^28.2.7",
+    "@syncfusion/ej2-react-inputs": "^28.2.3",
+    "@syncfusion/ej2-react-kanban": "^28.2.3",
+    "@syncfusion/ej2-react-popups": "^28.2.6",
+    "@syncfusion/ej2-react-richtexteditor": "^28.2.7",
+    "@syncfusion/ej2-react-schedule": "^28.2.7",
+    "@tailwindcss/vite": "^4.0.9",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.2.0",
+    "tailwindcss": "^4.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
+    "eslint": "^8.57.1",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
